2008-07-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclFCmd.c: Inodes on windows are unreliable [Bug 2015723]

2008-07-21  Miguel Sofer  <msofer@users.sf.net>

	* generic/tcl.decls:      Changed the implementation of    
	* generic/tclBasic.c:     [namespace import]; removed
	* generic/tclDecls.h:     Tcl_NRObjProc, replaced with
	* generic/tclExecute.c:   Tcl_NRCmdSwap (proposed public
	* generic/tclInt.h:       NRE API). This should fix 
	* generic/tclNRE.h:       [Bug 582506].
	* generic/tclNamesp.c:
	* generic/tclStubInit.c:  
	
	* generic/tclBasic.c:    NRE: enabled calling NR commands 
	* generic/tclExecute.c:  from the callbacks. Completely
	* generic/tclInt.h:      redone tailcall implementation
	* generic/tclNRE.h:      using the new feature. [Bug 2021489] 
	* generic/tclProc.c:
	* tests/NRE.test:
	
2008-07-20  Kevin B. Kenny  <kenykb@acm.org>

	* tests/fileName.test: Repaired the failing test fileName-15.7
	from dkf's commit earlier today.
	
2008-07-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclDictObj.c (SetDictFromAny): Make the list->dict
	transformation a bit more efficient; modern dicts are ordered and so
	we can round-trip through lists without needing the string rep at all.
	* generic/tclListObj.c (SetListFromAny): Make the dict->list
	transformation not lossy of internal representations and hence more
	efficient. [Bug 2008248] (ajpasadyn) but using a more efficient patch.

	* tests/fileName.test: Revise to reduce the obscurity of tests. In
	particular, all tests should now produce informative messages on
	failure and the quantity of [catch]-based obscurity is now greatly
	reduced; non-erroring is now checked for directly.

2008-07-19  Donal K. Fellows  <dkf@users.sf.net>

	* tests/env.test: Add LANG to the list of variables that are not
	touched by the environment variable tests, so that subprocesses can
	get their system encoding correct.

	* tests/exec.test, tests/env.test: Rewrite so that non-ASCII