@@ -24,7 +24,7 @@ test chan-1.1 {chan command general syntax} -body {
 } -returnCodes error -result "wrong # args: should be \"chan subcommand ?arg ...?\""
 test chan-1.2 {chan command general syntax} -body {
     chan FOOBAR
-} -returnCodes error -result "unknown or ambiguous subcommand \"FOOBAR\": must be blocked, close, configure, copy, create, eof, event, flush, gets, names, pending, pop, postevent, push, puts, read, seek, tell, or truncate"
+} -returnCodes error -match glob -result "unknown or ambiguous subcommand \"FOOBAR\": must be *"
 
 test chan-2.1 {chan command: blocked subcommand} -body {
     chan blocked foo bar
@@ -221,6 +221,40 @@ test chan-16.13 {chan command: pending output subcommand} -setup {
     unset -nocomplain result
     catch {chan close $f}
     catch {removeFile $file}
+}
+
+# TIP 304: chan pipe
+
+test chan-17.1 {chan command: pipe subcommand} -body {
+    chan pipe foo
+} -returnCodes error -result "wrong # args: should be \"chan pipe \""
+
+test chan-17.2 {chan command: pipe subcommand} -body {
+    chan pipe foo bar
+} -returnCodes error -result "wrong # args: should be \"chan pipe \""
+
+test chan-17.3 {chan command: pipe subcommand} -body {
+	set l [chan pipe]
+    foreach {pr pw} $l break
+    list [llength $l] [fconfigure $pr -blocking] [fconfigure $pw -blocking]
+} -result [list 2 1 1] -cleanup {
+    close $pw
+    close $pr
+}
+
+test chan-17.4 {chan command: pipe subcommand} -body {
+    set ::done 0
+    foreach {::pr ::pw} [chan pipe] break
+    after 100 {puts $::pw foo;flush $::pw}
+    fileevent $::pr readable {set ::done 1}
+    after 500 {set ::done -1}
+    vwait ::done
+    set out nope
+    if {$::done==1} {gets $::pr out}
+    list $::done $out
+} -result [list 1 foo] -cleanup {
+    close $::pw
+    close $::pr
 }
 
 cleanupTests
